Had to use images for social media icons
as the font usage doesn’t work…need more licensing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Killer Poboys</title>
+  <script src="js/retina.js"></script>
+  <script src="js/html5shiv-printshiv.js"></script>
+  <script src="js/html5shiv.js"></script>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -14,11 +17,11 @@
     </div>
     <div class="info">
       <h1>Internationally Inspired, Chef Crafted, New Orleans Style Sandwiches</h1>
-        <h2 class="secondary-text">Located at the back of the Erin Rose Bar. <br>Visit our <a href="http://killerpoboys.blogspot.com" target="_blank">Blog</a> to view a current menu</h2>
-        <p>Operating Hours: Wednesday to Monday, 12pm - 12am, closed Tuesday</p>
+        <h2 class="secondary-text">Located at the back of the Erin Rose Bar. <br>Visit our <a href="http://killerpoboys.blogspot.com" target="_blank" class="blog">Blog</a> to view a current menu</h2>
+        <h2 class="hours">Operating Hours: Wednesday to Monday, 12pm - 12am, closed Tuesday</h2>
         <div class="social-media">
-          <a href="https://twitter.com/killerpoboys" target="_blank" class="twitter">&#62218;</a>
-          <a href="http://www.facebook.com/pages/Killer-Poboys/354081487937620" target="_blank" class="facebook">&#62221;</a>
+          <a href="https://twitter.com/killerpoboys" target="_blank" class="twitter"><img src="images/twitter.png" alt="Find us on Twitter!" title="Find us on Twitter!" height="50" width="50"></a>
+          <a href="http://www.facebook.com/pages/Killer-Poboys/354081487937620" target="_blank" class="facebook"><img src="images/facebook.png" alt="Find us on Facebook!" title="Find us on Facebook!" height="50" width="50"></a>
       </div>
     </div>
   </div>
